--- a/Stitch GUI v7/StitchGUI_Config/PP.config
+++ b/Stitch GUI v7/StitchGUI_Config/PP.config
@@ -1,5 +1,7 @@
 [Path]
 ProcessingPathway="S:"
+ScrubPath="S:\SmartSPIM_Data"
+
 [Usage]
 
 Queue = True
@@ -11,5 +13,5 @@ Preview = True
 Radius = 50
 Overlap = 10
 MIP_% = 30
-Rename = False
+Rename = True
 Destripe_Volume = "S:\"
