Updated GUI w params for auto

--- a/Stitch GUI v7/StitchGUI_Config/PP.config
+++ b/Stitch GUI v7/StitchGUI_Config/PP.config
@@ -15,3 +15,11 @@ Overlap = 10
 MIP_% = 30
 Rename = True
 Destripe_Volume = "S:\"
+
+[AutoStitchParms]
+ZS_radius = 50
+tc_sigma_l = 0.35
+tc_sigma_u = 2.5
+tc_bal_1 = 0.5
+tc_bal_u = 1.5
+num_workers = 12
